--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "style-loader": "^0.20.1"
