--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "style-loader": "^0.20.1",
     "styled-components": "^3.1.6"
   }
