--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-waypoint": "^8.0.0",
     "style-loader": "^0.20.1",
     "styled-components": "^3.1.6",
     "unsplash-js": "^4.8.0"
