--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-waypoint": "^8.0.0",
     "style-loader": "^0.20.1",
