--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-facebook": "^4.2.1",
+    "react-icons": "^2.2.7",
     "react-modal": "^3.2.1",
     "react-placeholder": "^2.0.0",
     "react-router-dom": "^4.2.2",
