--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
